# CurvesGenerator

./: pyproject.toml
