[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CurvesGenerator"
version = "0.0.1"
authors = [
  { name="zhm-real", email="author@example.com" },
]
description = "Reeds Shepp curves generator"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
